samples/_failures_safe/1761656566_fdbeaa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6ba925a.c: In function ‘main’:
./samples/SAFE/__tmp_c6ba925a.c:168:5: error: expected declaration or statement at end of input
  168 |     tokenize(input, tokens);
      |     ^~~~~~~~
